compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__unknown_imported_module_type.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 2052
expression: "\nimport one/two\n\npub fn main(_x: two.Thing) {\n  Nil\n}\n"
snapshot_kind: text
---
----- SOURCE CODE
-- one/two.gleam


-- main.gleam

import one/two

pub fn main(_x: two.Thing) {
  Nil
}


----- ERROR
error: Unknown module type
  ┌─ /src/one/two.gleam:4:17
  │
4 │ pub fn main(_x: two.Thing) {
  │                 ^^^^^^^^^

The module `one/two` does not have a `Thing` type.
